syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "SymbolCollector";

package symbol_collector;

service SymbolCollection {
  rpc Uploads (stream SymbolUploadRequest) returns (google.protobuf.Empty);
}

message SymbolUploadRequest {
  string debugId = 1;
  bytes file = 2;
}
